--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,6 +25,27 @@ html,body{
 
   background-color: #ddd;
 }
+.img-figure{
+  position: absolute;
+
+  width :320px;
+  height: 360px;
+  margin: 0;
+  padding: 40px;
+
+  background-color: #fff;
+  box-sizing: border-box;
+}
+figcaption{
+  text-align: center;
+}
+figcaption .img-title{
+  margin: 20px 0 0 0;
+  color: #a7a0a2;
+  font-size: 16px;
+
+
+}
 /*image--end*/
 /*controller-start*/
 .controller-nav{
